# multimedia_ws

./: .gitignore  README.md
firmware_src/mmi_radio_src/: app.c
firmware_src/mmi_radio_src/modules/: freq_publisher.c  freq_reader.c  rcchecker.c  volume_led_bar.c  volume_publisher.c  volume_reader.c
firmware_src/mmi_radio_src/modules/freq_publisher/: freq_publisher.c  freq_reader.c
firmware_src/mmi_radio_src/modules/freq_subscriber/: freq_sevseg.c  freq_subscriber.c
firmware_src/mmi_radio_src/modules/lcd_subscriber/: i2c-lcd1602.c  i2c-lcd1602.h  lcd1602_i2c.c  lcd_subscriber.c  smbus.c
firmware_src/mmi_radio_src/modules/potentiometer_control/: potentiometer_control.c  potentiometer_control.h
firmware_src/mmi_radio_src/modules/potentiometer_reader/: potentiometer_reader.c  potentiometer_reader.h
firmware_src/mmi_radio_src/modules/volume_publisher/: volume_publisher.c  volume_publisher.h  volume_reader.c
firmware_src/mmi_radio_src/modules/volume_subscriber/: volume_led_bar.c  volume_subscriber.c
firmware_src/old_mmi_radio_src/: app.c
firmware_src/old_mmi_radio_src/modules/: freq_publisher.c  freq_reader.c  volume_subscriber.c
frontend/: index.html
project_description/: 11810848_MMI_Project_Diagram.drawio
ros2_ws/: start_micro_ros_agent_on_rpi.sh  start_project.bash  start_project_on_rpi.sh
ros2_ws/src/multimedia_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/multimedia_cpp/LICENSE/: header_copy-paste.txt
ros2_ws/src/multimedia_cpp/include/ir_receiver/: ir_receiver.hpp
ros2_ws/src/multimedia_cpp/include/lcd_1602/: lcd_1602.hpp
ros2_ws/src/multimedia_cpp/include/si470x/: si470x.hpp
ros2_ws/src/multimedia_cpp/src/ir_receiver/: ir_receiver_node.cpp
ros2_ws/src/multimedia_cpp/src/lcd_1602/: lcd_1602.cpp  lcd_1602_node.cpp
ros2_ws/src/multimedia_cpp/src/si470x/: si470x.cpp  si470x_node.cpp
ros2_ws/src/multimedia_python/: package.xml  setup.cfg  setup.py
ros2_ws/src/multimedia_python/launch/: multimedia_system.launch.py
ros2_ws/src/multimedia_python/multimedia_python/: controll_node.py  display_node.py  freq_controller_node.py  ir_receiver_node.py  lcd_1602_node.py  lcd_display_node.py  music_controller_node.py  radio_node.py  si470x_node.py  start_multimedia.py  volume_controller_node.py  web_controller.py  web_controller_node.py
ros2_ws/src/multimedia_python/multimedia_python/music_players/: base_music_player.py  dummy_radio_player.py  dummy_spotify_player.py  radio_player.py  spotify_player.py
ros2_ws/src/multimedia_python/multimedia_python/utils/: tft_two_line_display.py
src/multimedia_cpp/: CMakeLists.txt
src/multimedia_python/LICENSE/: header_copy-paste.txt
