<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multimedia_python</name>
  <version>0.0.0</version>
  <description>This packages contains all Python-based nodes for the multimedia station acting as a radio station and Spotify client.</description>
  <maintainer email="f.scopulovic@gmail.com">filip scopulovic</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
